--- a/layouts/shortcodes/syllabus.html
+++ b/layouts/shortcodes/syllabus.html
@@ -1,33 +1,32 @@
 <font color=#a64452>
-<b>Note: </b> This schedule may be updated as the semester progresses with all changes documented here (full details on accompanying Sakai announcements). All sessions will be recorded and posted on Sakai.
+<b>Note: </b> This schedule may be updated as the semester progresses with all changes documented here (full details on accompanying Sakai announcements). 
 </font>
 
-<b>Change Feb. 15:</b> Due dates for Case 01 peer review have been pushed back from their original dates. 
 
-<b>Change Mar. 1:</b> Due dates for Case 02 have been pushed back a week from their original dates. EM lecture has been extended to be covered over two days.  
 
-<b>Change Mar. 31:</b> Updated final labs to reflect project presentations.
-
-Major case studies and semester milestones are documented on the schedule below. However, regular ungraded mini-assignments will be given and discussed in class and lab to check mastery and identify areas for additional focus. Assignments are due at 11:59 PM US Eastern time unless otherwise noted.
+Major semester milestones are documented on the schedule below. However, regular mini-assignments will be given and discussed in class and lab to check mastery and identify areas for additional focus. Assignments are due at 11:59 PM US Eastern time unless otherwise noted.
 
 <br>
 
 <table class="table" style="max-width:900px;margin-left:auto;margin-right:auto">
   <tr>
     <th style="width:10%;text-align:left"></th>
-    <th style="width:5%;text-align:right">Week</th>
-    <th style="width:15%;text-align:right">Date</th>
-    <th style="width:35%">Activity</th>
-    <th style="width:5%;text-align:center">Link</th>
-	<th style="width:45%;text-align:left">Due</th>
+    <th style="width:10%;text-align:right"></th>
+    <th style="width:40%;text-align:left"></th>
+    <th style="width:5%;text-align:right">Slides</th>
+    <th style="width:5%;text-align:right">Labs</th>
+    <th style="width:5%;text-align:center">HW</th>
+	<th style="width:5%;text-align:left">Exam</th>
+	<th style="width:5%;text-align:left">Project</th>
+	<th style="width:5%;text-align:left">Due</th>
   </tr>
 
   {{ range $.Site.Data.lessons }}
     {{range . }}
     <tr>
-      <td><font color="#00539B"><b>{{ .case }}</b></font></td>
 	  <td align="right">{{ .week }}</td>
-      <td align="right">{{ .date }}</td>
+
+     <td align="right">{{ .date }}</td>
       <td>{{ .title }}</td>
 
       {{ if .slides }}
@@ -38,6 +37,49 @@ Major case studies and semester milestones are documented on the schedule below.
         <td align="center"><font color="f1f1f1">
           <i class="fa fa-laptop fa-lg"></i></font></td>
       {{ end }}
+      
+      {{ if .lab }}
+        <td align="center"><a href="{{ .Site.baseurl }}/labs/{{ .lab }}">
+          <i class="fas fa-flask"></i></a></td>
+      {{ else }}
+        <td align="center"><font color="f1f1f1">
+          <i class="fas fa-flask"></i></font></td>
+      {{ end }}
+      
+      
+      {{ if .hw }}
+        <td align="center"><a href="{{ .Site.baseurl }}/hw/{{ .hw }}">
+          <i class="fa fa-pencil-square-o fa-lg"></i></a></td>
+      {{ else }}
+        <td align="center"><font color="f1f1f1">
+          <i class="fa fa-pencil-square-o fa-lg"></i></font></td>
+      {{ end }}
+      
+            
+      {{ if .exam }}
+        <td align="center"><a href="{{ .Site.baseurl }}/exam/{{ .exam }}">
+          <i class="fa fa-check-square fa-lg"></i></a></td>
+      {{ else }}
+        <td align="center"><font color="f1f1f1">
+          <i class="fa fa-check-square fa-lg"></i></font></td>
+      {{ end }}  
+      
+      {{ if .project }}
+        <td align="center"><a href="{{ .Site.baseurl }}/project/{{ .project }}">
+          <i class="fas fa-users"></i></a></td>
+      {{ else }}
+        <td align="center"><font color="f1f1f1">
+          <i class="fas fa-users"></i></font></td>
+      {{ end }}
+
+      {{ if .due }}
+        <td align="center"><a href="{{ .Site.baseurl }}/project/{{ .project }}">
+          <i class="fas fa-upload"></i></a></td>
+      {{ else }}
+        <td align="center"><font color="f1f1f1">
+          <i class="fas fa-upload"></i></font></td>
+      {{ end }}
+
 <!--    
       {{ if .reading }}
       <td align="center"><a href="{{ .Site.baseurl }}/reading/{{ .reading  }}">
@@ -96,8 +138,7 @@ Major case studies and semester milestones are documented on the schedule below.
       {{ end }}
 	  
 	  --> 
-	  
-      <td>{{ .due }}</td>
+ 
     </tr>
     {{ end }}
   {{ end }}
