--- a/layouts/shortcodes/syllabus.html
+++ b/layouts/shortcodes/syllabus.html
@@ -39,7 +39,7 @@ Major semester milestones are documented on the schedule below. However, regular
       {{ end }}
       
       {{ if .lab }}
-        <td align="center"><a href="{{ .Site.baseurl }}/labs/{{ .lab }}">
+        <td align="center"><a href="{{ .Site.baseurl }}/project/{{ .lab }}">
           <i class="fas fa-flask"></i></a></td>
       {{ else }}
         <td align="center"><font color="f1f1f1">
